welcome.lessons.welcome.array.search.SecondMaxValue.scala.error
max2Value:4: error: not found: value Interger
  var max2 = Interger. MIN_VALUE
             ^